--- a/app/components/citycardlist/citycardlist.module.scss
+++ b/app/components/citycardlist/citycardlist.module.scss
@@ -64,7 +64,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  position: fixed; 
+  bottom: 60px; 
+  left: 50%;
+  transform: translateX(-50%); 
+  z-index: 1000; 
 }
 
 .addButton {
