Modale in prev per la PUT

--- a/app/components/modaleTodo/modaleTodo.module.scss
+++ b/app/components/modaleTodo/modaleTodo.module.scss
@@ -1,4 +1,4 @@
-.modalOverlay {
+.todo {
   position: fixed;
   top: 0;
   left: 0;
@@ -6,46 +6,36 @@
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: center;
   align-items: center;
-  z-index: 1000;
+  justify-content: center;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .modalContent {
   background: white;
   padding: 20px;
-  border-radius: 10px;
-  width: 80%;
-  max-width: 500px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  z-index: 10;
 }
 
 .title {
-  margin-bottom: 20px;
-  font-size: 1.5rem;
+  margin-bottom: 10px;
 }
 
 .calendario {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .luogo,
 .orario,
 .testo {
   margin-bottom: 10px;
-}
-
-.closeButton {
-  background-color: #8673f5;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-.closeButton:hover {
-  background-color: #6a5fc7;
-  transform: scale(1.1);
 }
