--- a/app/components/checklist/checklist.module.scss
+++ b/app/components/checklist/checklist.module.scss
@@ -1,17 +1,36 @@
 .checkList {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .checkItem {
-    background: #f4f4f4;
-    margin: 10px 0;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .checkItem p {
-    margin: 5px 0;
-  }
-  
+  list-style-type: none;
+  padding: 0;
+  margin: 20px 0;
+}
+
+.checkItem {
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 8px; 
+  margin-bottom: 8px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+}
+
+.todoContent p {
+  margin: 3px 0; 
+  font-size: 0.9rem; 
+}
+
+.todoActions {
+  display: flex;
+  gap: 8px; 
+}
+
+.icon {
+  cursor: pointer;
+  color: #878FE0; 
+  transition: color 0.3s;
+}
+
+.icon:hover {
+  color: #8673f5; 
+}
