--- a/app/components/footer/footer.module.scss
+++ b/app/components/footer/footer.module.scss
@@ -1,34 +1,28 @@
 .footer {
+  background-color: #878FE0;
+  color: white;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #878FE0;
   padding: 10px 0;
   position: fixed;
-  bottom: 0;
   width: 100%;
+  bottom: 0;
+  z-index: 1000;
 }
 
 .footerButton {
-  background: none;
-  border: none;
   color: white;
-  font-size: 1rem;
-  cursor: pointer;
+  text-decoration: none;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.footerButton span {
-  font-size: 0.75rem;
-  margin-top: 5px;
+.footerButton .inactiveIcon {
+  color: rgba(255, 255, 255, 0.7);
 }
 
-.inactiveIcon {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.active {
-  color: white;
+.footerButton.active {
+  font-weight: bold;
 }
