--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
+  padding-bottom: 60px; 
+  font-family: Arial, sans-serif;
+  background-color: #f0f3f7;
 }
 
 img {
