mancava sto bottone maledetto

--- a/app/components/travel/travel.module.scss
+++ b/app/components/travel/travel.module.scss
@@ -166,3 +166,8 @@
   background-color: #6a5fc7;
   transform: scale(1.1);
 }
+
+.navButton.activeButton {
+  background-color:#8673f5;
+  color: white;
+}
