--- a/app/components/modaleTodo/modaleTodo.module.scss
+++ b/app/components/modaleTodo/modaleTodo.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
 }
 
 .overlay {
@@ -21,21 +22,106 @@
 
 .modalContent {
   background: white;
-  padding: 20px;
-  border-radius: 8px;
-  z-index: 10;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  max-width: 500px;
+  width: 100%;
+  z-index: 1001;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  text-align: center;
+  color: #333;
 }
 
-.calendario {
-  margin-bottom: 10px;
+.inputGroup {
+  width: 100%;
+  margin-bottom: 20px;
 }
 
-.luogo,
-.orario,
-.testo {
-  margin-bottom: 10px;
+.label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+  font-size: 1rem;
+  color: #333;
+}
+
+.icon {
+  margin-right: 8px;
+}
+
+.datePicker {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s;
+}
+
+.input,
+.textarea {
+  width: calc(100% - 20px);
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s;
+}
+
+.input:focus,
+.textarea:focus,
+.datePicker:focus {
+  border-color: #8673f5;
+  outline: none;
+}
+
+.textarea {
+  height: 100px;
+  resize: none;
+}
+
+.buttonGroup {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.submitButton,
+.cancelButton {
+  background-color: #8673f5;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+  flex: 1;
+  text-align: center;
+}
+
+.cancelButton {
+  background-color: #ccc;
+}
+
+.submitButton:hover {
+  background-color: #6a5fc7;
+  transform: scale(1.05);
+}
+
+.cancelButton:hover {
+  background-color: #999;
+  transform: scale(1.05);
 }
