--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -1,52 +1,74 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #878FE0;
-    padding: 10px;
-  }
-  
-  .profileContainer {
-    position: relative;
-    width: 40px;
-    height: 40px;
-  }
-  
-  .profileImage {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  
-  .uploadLabel {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: #ccc;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  
-  .uploadInput {
-    display: none;
-  }
-  
-  .uploadText {
-    font-size: 0.75rem;
-    color: white;
-  }
-  
-  .logo {
-    width: 100px;
-    height: auto;
-  }
-  
-  .menuButton {
-    font-size: 1.5rem;
-    color: white;
-    cursor: pointer;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #878FE0;
+  padding: 10px;
+}
+
+.profileContainer {
+  position: relative;
+  width: 40px;
+  height: 40px;
+}
+
+.profileImage {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.uploadLabel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.uploadInput {
+  display: none;
+}
+
+.uploadText {
+  font-size: 0.75rem;
+  color: white;
+}
+
+.logo {
+  width: 100px;
+  height: auto;
+}
+
+.menuButton {
+  font-size: 1.5rem;
+  color: white;
+  cursor: pointer;
+}
+
+.dropdownMenu {
+  position: absolute;
+  top: 50px; 
+  right: 20px;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  z-index: 1000;
+  padding: 10px;
+}
+
+.dropdownItem {
+  display: block;
+  padding: 10px;
+  color: #333;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.dropdownItem:hover {
+  background-color: #f0f0f0;
+}
