Modificata l'intera grandezza dell'app e di tutti i componenti

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,5 +1,14 @@
-.main {
-  padding: 20px;
-  text-align: center;
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.navbar,
+.footer,
+.home,
+.content {
   max-width: 640px;
+  width: 100%;
 }
