--- a/app/components/home/home.module.scss
+++ b/app/components/home/home.module.scss
@@ -1,5 +1,14 @@
-.main {
-    padding: 20px;
-    text-align: center;
-  }
-  
+.homeContainer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 0;
+}
+
+.home {
+  text-align: center;
+  width: 100%;
+  max-width: 680px; 
+  margin-top: -10px;
+
+}
