--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -1,9 +1,17 @@
+.navbarContainer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #878FE0;
   padding: 10px;
+  max-width: 640px;
+  width: 100%;
 }
 
 .profileContainer {
