--- a/app/components/searchbar/searchbar.module.scss
+++ b/app/components/searchbar/searchbar.module.scss
@@ -1,26 +1,20 @@
 .searchbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    background-color: #878FE0;
-    margin-top: -10px;
-    position: relative;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  background-color: #878FE0;
+  margin-top: -10px;
+  position: relative;
+  width: 100%;
   
-  .input {
-    width: 80%;
-    padding: 10px;
-    padding-right: 40px; 
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .searchIcon {
-    position: absolute;
-    right: 60px; 
-    color: #ccc;
-    font-size: 1.2rem;
-    cursor: pointer;
-  }
-  
+}
+
+.input {
+  width: calc(100% - 40px);
+  padding: 10px;
+  padding-right: 40px; 
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
