--- a/app/components/citycardlist/citycardlist.module.scss
+++ b/app/components/citycardlist/citycardlist.module.scss
@@ -84,3 +84,15 @@
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+.showAllButton {
+  background: none;
+  border: none;
+  color: #8673f5;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 10px;
+}
+
+.showAllButton:hover {
+  text-decoration: underline;
+}
