Aggiunte API per Avatar User e API per immagini delle città. Installare dipendenze.

--- a/app/components/travel/travel.module.scss
+++ b/app/components/travel/travel.module.scss
@@ -62,7 +62,7 @@
   margin: 0;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .navbar {
@@ -70,7 +70,7 @@
   display: flex;
   justify-content: space-around;
   padding: 10px 0;
-  margin: 0 -20px; 
+  margin: 0 -20px;
   margin-bottom: 20px;
 }
 
@@ -86,8 +86,8 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s, transform 0.3s;
   font-size: 0.8rem;
-  flex-grow: 1; 
-  margin: 0 5px; 
+  flex-grow: 1;
+  margin: 0 5px;
 }
 
 .navButton:hover {
@@ -118,7 +118,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
 }
 
 .todoContent p {
@@ -127,24 +127,24 @@
 
 .todoActions {
   display: flex;
-  gap: 10px; 
+  gap: 10px;
 }
 
 .icon {
   cursor: pointer;
-  color: #878FE0; 
+  color: #878FE0;
   transition: color 0.3s;
 }
 
 .icon:hover {
-  color: #8673f5; 
+  color: #8673f5;
 }
 
 .addButtonContainer {
   display: flex;
   justify-content: center;
   position: fixed;
-  bottom: 60px; 
+  bottom: 60px;
   left: 0;
   right: 0;
   z-index: 10;
@@ -170,4 +170,11 @@
 .navButton.activeButton {
   background-color:#8673f5;
   color: white;
+}
+
+.cityInfo h1 {
+  margin: 0;
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
 }
