--- a/app/components/citycardlist/citycardlist.module.scss
+++ b/app/components/citycardlist/citycardlist.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
 }
 
 .header {
@@ -63,11 +63,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed; 
-  bottom: 60px; 
+  position: fixed;
+  bottom: 60px;
   left: 50%;
-  transform: translateX(-50%); 
-  z-index: 1000; 
+  transform: translateX(-50%);
+  z-index: 1000;
 }
 
 .addButton {
