--- a/app/components/cityplan/cityplan.module.scss
+++ b/app/components/cityplan/cityplan.module.scss
@@ -37,6 +37,49 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1rem;
+  width: calc(100% - 22px); 
+  outline: none;
+}
+
+.cityInputContainer {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.cityInput {
+  flex-grow: 1;
+  padding-right: 40px;
+}
+
+.gpsIcon {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.suggestions {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  max-height: 150px;
+  overflow-y: auto;
+  position: absolute;
+  width: calc(100% - 22px);
+}
+
+.suggestions li {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.suggestions li:hover {
+  background-color: #f0f0f0;
 }
 
 .cityPlan button {
