--- a/app/components/cityCard/citycard.module.scss
+++ b/app/components/cityCard/citycard.module.scss
@@ -1,7 +1,6 @@
 .cityCard {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   background-color: #ffffff;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -9,6 +8,7 @@
   margin-bottom: 15px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   cursor: pointer;
+  justify-content: space-around;
 }
 
 .cityCard:hover {
@@ -25,15 +25,13 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   width: 100%;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 .actionButtons {
   display: flex;
-  justify-content: flex-end;
-  gap: 10px;
+  gap: 10px; 
   margin-top: 10px;
-  width: 100%;
 }
 
 .actionButtons button {
@@ -44,8 +42,6 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
-  display: flex;
-  align-items: center;
 }
 
 .actionButtons button:hover {
@@ -53,49 +49,8 @@
   color: #ffffff;
 }
 
-.actionButtons .icon {
-  margin-right: 5px;
-}
-
-.editForm {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-top: 10px;
-  width: 100%;
-}
-
-.editForm input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: calc(100% - 22px);
-}
-
-.editForm button {
-  background-color: #ffffff;
-  color: #8673f5;
-  border: 1px solid #8673f5;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  display: flex;
-  align-items: center;
-}
-
-.editForm button:hover {
-  background-color: #8673f5;
-  color: #ffffff;
-}
-
-.editForm button .icon {
-  margin-right: 5px;
-}
-
 .cityInfo {
   flex-grow: 1;
-  width: 100%;
 }
 
 .cityInfo h3 {
@@ -104,8 +59,30 @@
   color: #333;
 }
 
-.cityInfo p {
+.cityDates {
+  display: flex;
+  flex-direction: column;
+}
+
+.cityDates p {
   font-size: 1rem;
   color: #666;
   margin: 3px 0;
+}
+
+.cityImageContainer {
+  position: relative;
+  width: 70px;
+  height: 70px;
+  flex-shrink: 0;
+}
+
+.cityImage {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  object-fit: cover;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
