--- a/app/components/citycardlist/citycardlist.module.scss
+++ b/app/components/citycardlist/citycardlist.module.scss
@@ -84,6 +84,7 @@
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .showAllButton {
   background: none;
   border: none;
@@ -95,4 +96,45 @@
 
 .showAllButton:hover {
   text-decoration: underline;
+}
+
+.dotsContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dots {
+  font-size: 2rem;
+  color: #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.dot {
+  animation: wave 1.5s infinite;
+  font-size: 2rem;
+}
+
+.dot:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes wave {
+  0%, 60%, 100% {
+    transform: initial;
+  }
+  30% {
+    transform: translateY(-10px);
+  }
 }
