--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -12,6 +12,7 @@
   padding: 10px;
   max-width: 640px;
   width: 100%;
+  position: relative; 
 }
 
 .profileContainer {
@@ -34,7 +35,7 @@
 
 .dropdownMenu {
   position: absolute;
-  top: 50px; 
+  top: 60px; 
   right: 20px;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
