--- a/app/components/checkListCard/CheckListCard.module.scss
+++ b/app/components/checkListCard/CheckListCard.module.scss
@@ -89,3 +89,11 @@
 .cancelButton:hover {
   background-color: #999;
 }
+
+.text,
+.place,
+.time {
+  margin: 5px 0;
+  font-size: 1rem;
+  color: #666;
+}
