Sistemate le modali, design generico, aggiunte categorie

--- a/app/about/page.module.scss
+++ b/app/about/page.module.scss
@@ -1,5 +1,5 @@
 .main {
-  background-color: #F8E5FF;
+  background-color: #f9f9f9;;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -10,7 +10,7 @@
 }
 
 .mainWrapper {
-  margin: 0 auto;
+
   width: 100%;
   text-align: center;
 }
