--- a/app/components/mapmodal/mapmodal.module.scss
+++ b/app/components/mapmodal/mapmodal.module.scss
@@ -1,55 +1,47 @@
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .modalContent {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    position: relative;
-    width: 90%;
-    max-width: 600px;
-  }
-  
-  .closeButton {
-    background-color: #f9a825;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-  
-  .closeButton:hover {
-    background-color: #f57f17;
-    transform: scale(1.1);
-  }
-  
-  .customIconContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .customIcon {
-    font-size: 30px;
-    color: #f00;
-  }
-  
+.mapModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2000;
+}
+
+.mapModalContent {
+  background: white;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  max-width: 600px;
+  width: 100%;
+  z-index: 2001;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.customIconContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.customIcon {
+  font-size: 2rem;
+  color: red;
+}
