--- a/app/components/walletCard/walletcard.module.scss
+++ b/app/components/walletCard/walletcard.module.scss
@@ -45,3 +45,74 @@
 .icon:hover {
   color: #8673f5;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.input {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+  width: calc(100% - 20px);
+}
+
+.input:focus {
+  border-color: #8673f5;
+  outline: none;
+}
+
+.categorySelector {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
+}
+
+.categoryIcon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  transition: color 0.3s, transform 0.3s;
+}
+
+.categoryIcon:hover {
+  color: #8673f5;
+  transform: scale(1.1);
+}
+
+.selectedCategory {
+  color: #8673f5;
+}
+
+.formButtons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+
+.saveButton,
+.cancelButton {
+  background-color: #8673f5;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.saveButton:hover,
+.cancelButton:hover {
+  background-color: #6a5fc7;
+  transform: scale(1.05);
+}
+
+.cancelButton {
+  background-color: #ccc;
+}
