--- a/app/components/WalletWrapper/walletwrapper.module.scss
+++ b/app/components/WalletWrapper/walletwrapper.module.scss
@@ -8,6 +8,10 @@
   height: 100vh;
 }
 
+.city {
+  font-family: Arial, sans-serif;
+}
+
 .header {
   background-color: #878fe0;
   padding: 20px;
@@ -62,8 +66,6 @@
   height: 100vh;
   padding: 20px;
   margin: 0;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -92,9 +94,26 @@
   margin: 0 5px;
   text-decoration: none;
   color: #333;
+  text-decoration: none;
+  font-family: Arial, sans-serif;
 }
 
-.navButton:hover {
+.navButtonBudget {
+  background-color: white;
+  border: 1px solid #878fe0;
+  border-radius: 10px;
+  padding: 8px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.3s;
+  font-size: 0.8rem;
+  flex-grow: 1;
+  margin: 0 5px;
+  text-decoration: none;
+  font-family: Arial, sans-serif;
   background-color: #8673f5;
   color: white;
 }
@@ -103,7 +122,11 @@
   margin-left: 10px;
 }
 
-.activeButton {
+.navButtonBudget span {
+  margin-left: 10px;
+}
+
+.navButton:hover {
   background-color: #8673f5;
   color: white;
 }
