--- a/app/about/page.module.scss
+++ b/app/about/page.module.scss
@@ -1,5 +1,5 @@
 .main {
-  background-color: #f9f9f9;;
+  background-color: #f9f9f9;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -7,10 +7,10 @@
   height: auto;
   overflow: auto;
   padding-bottom: 80px;
+  font-family: Arial, sans-serif;
 }
 
 .mainWrapper {
-
   width: 100%;
   text-align: center;
 }
