--- a/app/components/checkListCard/CheckListCard.module.scss
+++ b/app/components/checkListCard/CheckListCard.module.scss
@@ -10,6 +10,7 @@
   align-items: flex-start;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   font-family: Arial, sans-serif;
+  text-decoration: none;
 }
 
 .checkItem:hover {
