--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -5,6 +5,7 @@
 }
 
 .navbar {
+  position: relative;
   background-color: #878fe0;
   color: white;
   display: flex;
@@ -14,6 +15,7 @@
   z-index: 1000;
   max-width: 640px;
   width: 100%;
+  text-decoration: none;
 }
 
 .profileContainer {
@@ -57,4 +59,11 @@
 
 .dropdownItem:hover {
   background-color: #f0f0f0;
+}
+
+@media only screen and (min-width: 640px) {
+  .dropdownMenu {
+    top: 80px;
+    right: 3%;
+  }
 }
