--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 0;
+  padding: 10px 0 0 0;
   z-index: 1000;
   max-width: 640px;
   width: 100%;
