--- a/app/components/noteWrapper/NoteWrapper.module.scss
+++ b/app/components/noteWrapper/NoteWrapper.module.scss
@@ -1,4 +1,4 @@
-.travel {
+.wallet {
   background-color: #f0f3f7;
   padding: 0;
   border-radius: 0;
@@ -6,7 +6,6 @@
   margin: 0;
   padding-bottom: 80px;
   height: 100vh;
-  font-family: Arial, sans-serif;
 }
 
 .city {
@@ -77,7 +76,6 @@
   padding: 10px 0;
   margin: 0 -20px;
   margin-bottom: 20px;
-  text-decoration: none;
 }
 
 .navButton {
@@ -95,10 +93,27 @@
   flex-grow: 1;
   margin: 0 5px;
   text-decoration: none;
+  color: #333;
+  text-decoration: none;
   font-family: Arial, sans-serif;
 }
 
-.navButton:hover {
+.navButtonBudget {
+  background-color: white;
+  border: 1px solid #878fe0;
+  border-radius: 10px;
+  padding: 8px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.3s;
+  font-size: 0.8rem;
+  flex-grow: 1;
+  margin: 0 5px;
+  text-decoration: none;
+  font-family: Arial, sans-serif;
   background-color: #8673f5;
   color: white;
 }
@@ -107,45 +122,13 @@
   margin-left: 10px;
 }
 
-.activeButton {
+.navButtonBudget span {
+  margin-left: 10px;
+}
+
+.navButton:hover {
   background-color: #8673f5;
   color: white;
-}
-
-.checkList {
-  list-style-type: none;
-  padding: 0;
-  margin: 20px 0;
-}
-
-.checkItem {
-  background-color: #ffffff;
-  border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.todoContent p {
-  margin: 5px 0;
-}
-
-.todoActions {
-  display: flex;
-  gap: 10px;
-}
-
-.icon {
-  cursor: pointer;
-  color: #878fe0;
-  transition: color 0.3s;
-}
-
-.icon:hover {
-  color: #8673f5;
 }
 
 .addButtonContainer {
@@ -173,16 +156,4 @@
 .addButton:hover {
   background-color: #6a5fc7;
   transform: scale(1.1);
-}
-
-.navButton.activeButton {
-  background-color: #8673f5;
-  color: white;
-}
-
-.cityInfo h1 {
-  margin: 0;
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
 }
