--- a/app/components/searchbar/searchbar.module.scss
+++ b/app/components/searchbar/searchbar.module.scss
@@ -3,20 +3,21 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-color: #878FE0;
+  background-color: #878fe0;
   margin-top: -10px;
   position: relative;
   width: 100%;
-  
+
+  .input {
+    width: calc(100% - 40px);
+    padding: 10px;
+    margin-top: 10px;
+    padding-right: 40px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    height: 40px;
+    line-height: 20px;
+    font-size: 16px;
+  }
 }
-
-.input {
-  width: calc(100% - 40px);
-  padding: 10px;
-  padding-right: 40px; 
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  outline: none;
-
-}
-
