--- a/app/profile/profile.module.scss
+++ b/app/profile/profile.module.scss
@@ -1,10 +1,13 @@
 .profile_container {
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 1200px;
+  height: auto;
+  overflow: auto;
+  padding-bottom: 80px;
   font-family: Arial, sans-serif;
-
-  margin-top: 10px;
 
   .profile_img {
     float: left;
@@ -22,8 +25,10 @@
   }
 
   .profile_contatti {
-    margin: 5px;
-
+    display: grid;
+    // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin: 20px;
     p {
       margin-top: 5px;
     }
