--- a/app/components/WalletWrapper/walletwrapper.module.scss
+++ b/app/components/WalletWrapper/walletwrapper.module.scss
@@ -6,6 +6,7 @@
   margin: 0;
   padding-bottom: 80px;
   height: 100vh;
+  position: relative;
 }
 
 .city {
@@ -17,10 +18,14 @@
   padding: 20px;
   display: flex;
   align-items: center;
+  justify-content: space-between; 
   position: relative;
   margin: 0;
 }
 
+.totalprice{
+  font-family: Arial, sans-serif;
+}
 .cityInfo {
   display: flex;
   align-items: center;
@@ -59,6 +64,17 @@
   text-align: center;
   color: #ffffff;
   font-size: 0.9rem;
+}
+
+.totalCost {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.totalCost h4 {
+  margin: 0;
+  font-size: 1.5rem;
 }
 
 .body {
