--- a/app/components/noteWrapper/NoteWrapper.module.scss
+++ b/app/components/noteWrapper/NoteWrapper.module.scss
@@ -98,7 +98,7 @@
   font-family: Arial, sans-serif;
 }
 
-.navButtonBudget {
+.navButtonNote {
   background-color: white;
   border: 1px solid #878fe0;
   border-radius: 10px;
